train_split_stage added

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,6 @@
 stages:
   load_data: 
-    cmd: "python src/load_data.py --config=params.yaml"
+    cmd: python src/load_data.py --config=params.yaml
     deps:
     - src/get_data.py
     - src/load_data.py
@@ -8,3 +8,13 @@ stages:
 
     outs:
     - data/raw/winequality.csv
+
+  split_data:
+    cmd: python src/split_data.py --config=params.yaml
+    deps:
+    - src/split_data.py
+    - data/raw/winequality.csv
+
+    outs:
+    - data/processed/train_winequality.csv
+    - data/processed/test_winequality.csv
