--- a/dvc.yaml
+++ b/dvc.yaml
@@ -18,3 +18,14 @@ stages:
     outs:
     - data/processed/train_winequality.csv
     - data/processed/test_winequality.csv
+
+
+  train_and_evaluate:
+    cmd: python src/train_and_evaluate.py --config=params.yaml
+    deps:
+    - src/split_data.py
+    - data/raw/winequality.csv
+
+    outs:
+    - data/processed/train_winequality.csv
+    - data/processed/test_winequality.csv
