Changes done in train and evalue also in params file

--- a/params.yaml
+++ b/params.yaml
@@ -22,3 +22,7 @@ estimator:
       l1_ratio: 0.89
 
 model_dir : saved_models  
+
+reports:
+  params: report/param.json
+  scores: report/scores.json
