--- a/dvc.yaml
+++ b/dvc.yaml
@@ -23,9 +23,19 @@ stages:
   train_and_evaluate:
     cmd: python src/train_and_evaluate.py --config=params.yaml
     deps:
-    - src/split_data.py
-    - data/raw/winequality.csv
-
-    outs:
     - data/processed/train_winequality.csv
     - data/processed/test_winequality.csv
+    - src/train_and_evaluate.py
+
+    params:
+    - estimator.ElasticNet.params.alphas
+    - estimator.ElasticNet.params.l1_ratio
+
+    metrics:
+    - report/scores.json:
+        cache: false
+    - report/param.json:
+        cache: false
+
+    outs:
+    - saved_models/model.joblib
