--- a/params.yaml
+++ b/params.yaml
@@ -18,8 +18,10 @@ split_data:
 estimator:
   ElasticNet:
     params:
-      alphas: 0.88
-      l1_ratio: 0.89
+      alphas: 0.78
+      l1_ratio: 0.69
+#     alphas: 0.88
+#      l1_ratio: 0.89
 
 model_dir : saved_models  
 
