--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -4,10 +4,11 @@ on:
   push:
     branches:
     - main
+    - branch_mlflow
   pull_request:
     branches:
     - main
-
+    - branch_mlflow
 jobs:
   build:
 
@@ -39,7 +40,7 @@ jobs:
     #   env:
     #     HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
     #     HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
-    #   if: github.ref == 'refs/heads/main' && job.status == 'success'
+    #   if: github.ref == 'refs/heads/branch_mlflow' && job.status == 'success'
     #   run: |
     #     git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
     #     git push heroku HEAD:main -f
